2003-03-05  Zoran Vasiljevic <zoran@archiware.com>

	* nsd/init.tcl: added handling of commands imported from
	other namespaces in _ns_getscript procedure.

2003-03-05  Mark Page  <mpagenva@aol.com>

	* nsd/adpcmds.c: 
	* nsd/adpeval.c:
	* nsd/nsd.h: (patch) Added optional switches to ns_adp_parse;
	-cwd <path>, -savedresult <varname>
	-savedresult supports usages which require the adp script's result
	separate from the output buffer (which is the func result)
	-cwd supports prespecifying the initial cwd for which the script
	will be executed.

2003-03-03 Nathan Folkman <shmooved@aol.com>

        * nscgi/nscgi.c: (bug fix) Applied patch to set SCRIPT_NAME 
        which is passed as an environment variable to the CGI script.
        SF bug 230479.

2003-02-25  Nathan Folkman <shmooved@aol.com>

        * nsd/init.tcl: (patch) Added logging of errorInfo
        and errorCode globals to _ns_sourcefile command.
        SF patch 690025.

        * sample-config.tcl:
        * tcl/fastpath.c: (bug fix) Added fast path configuration
        example. Fixed bug that was adding an extra slash to 
        directory listings in _ns_dirlist. SF bug 682077.

        * nsd/tclimg.c: (bug fix) Fixed ns_jpegsize command for
        images which contained a DHT. Removed AppendDims command
        which has been replaced with AppendObjDims. SF bug 685055.

2003-02-07  Elizabeth Thomas <eathomas93@aol.com>

        * TAG aolserver_v4_r0_beta_2

        * tcl/sendmail.tcl: (bug fix) SF bugs 669217/669844
        Fix handling of addressees so we don't lose friendly address name
    
        * configure: fix additional defaults from cc to gcc

2003-02-06  Mark Page <mpagenva@aol.com>

        * nsd/return.c: (bug fix) SF bug 674033.
        (bug fix) Correct the status code for BadRequest returns.

2003-02-06  Jamie Rasmussen <jrasmuss@mle.ie>

        * nsthread/winthread.c: (bug fix) SF bug 675033.
        (bug fix) Fixed crash on second DLL_THREAD_DETACH.
